backspace implemented, working

--- a/Calculator/en.lproj/MainStoryboard.storyboard
+++ b/Calculator/en.lproj/MainStoryboard.storyboard
@@ -310,6 +310,29 @@
                                     <action selector="clearPressed" destination="2" eventType="touchUpInside" id="F3M-Kd-zbr"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YbL-yG-aZ0">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="&lt;--">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0aG-5c-3b8">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="&lt;--">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="backspacePressed" destination="2" eventType="touchUpInside" id="bBU-aI-irT"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -317,7 +340,6 @@
                             <constraint firstAttribute="trailing" secondItem="rPf-f9-z66" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="1om-zW-egG"/>
                             <constraint firstItem="kqH-Gd-rD7" firstAttribute="leading" secondItem="Djk-md-maW" secondAttribute="leading" type="default" id="2CY-sg-QIF"/>
                             <constraint firstItem="Djk-md-maW" firstAttribute="baseline" secondItem="QMb-GY-GFJ" secondAttribute="baseline" type="default" id="2DK-6r-Ftp"/>
-                            <constraint firstItem="Lad-Sy-4Si" firstAttribute="trailing" secondItem="rSN-le-aDE" secondAttribute="trailing" type="default" id="2Ng-cw-9fZ"/>
                             <constraint firstAttribute="trailing" secondItem="Rk7-1K-O9v" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="2gY-Mr-g9g"/>
                             <constraint firstItem="rPf-f9-z66" firstAttribute="leading" secondItem="OZ1-ES-Da9" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="2mv-54-0Lb"/>
                             <constraint firstItem="RmL-5k-a0p" firstAttribute="leading" secondItem="kqH-Gd-rD7" secondAttribute="leading" type="default" id="38C-7k-cA7"/>
@@ -325,6 +347,7 @@
                             <constraint firstItem="OZ1-ES-Da9" firstAttribute="baseline" secondItem="YGw-LF-Nx8" secondAttribute="baseline" type="default" id="7o6-Ca-1Qn"/>
                             <constraint firstItem="dVA-8a-fLB" firstAttribute="leading" secondItem="Rk7-1K-O9v" secondAttribute="leading" type="default" id="7pV-x0-4L8"/>
                             <constraint firstItem="Z80-yA-jQU" firstAttribute="baseline" secondItem="RmL-5k-a0p" secondAttribute="baseline" type="default" id="8oP-kn-Cfx"/>
+                            <constraint firstItem="YbL-yG-aZ0" firstAttribute="leading" secondItem="Lad-Sy-4Si" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="AcX-QC-7pP"/>
                             <constraint firstItem="MQx-us-M7p" firstAttribute="baseline" secondItem="Uyj-90-36w" secondAttribute="baseline" type="default" id="C8m-Ky-P9W"/>
                             <constraint firstItem="OZ1-ES-Da9" firstAttribute="leading" secondItem="YGw-LF-Nx8" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="CcD-co-OdR"/>
                             <constraint firstAttribute="trailing" secondItem="l8i-W0-6e1" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="CiR-mN-hnZ"/>
@@ -344,18 +367,23 @@
                             <constraint firstItem="RmL-5k-a0p" firstAttribute="leading" secondItem="Z80-yA-jQU" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Qtc-O6-OBx"/>
                             <constraint firstItem="MQx-us-M7p" firstAttribute="leading" secondItem="Uyj-90-36w" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="RM6-j7-U53"/>
                             <constraint firstItem="Uyj-90-36w" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="SF9-qC-ap3"/>
+                            <constraint firstItem="0aG-5c-3b8" firstAttribute="leading" secondItem="Lad-Sy-4Si" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="ShW-9t-3tn"/>
                             <constraint firstItem="esI-Kt-p8h" firstAttribute="baseline" secondItem="kqH-Gd-rD7" secondAttribute="baseline" type="default" id="TBI-yd-jOn"/>
                             <constraint firstItem="aM8-3v-sf7" firstAttribute="leading" secondItem="QMb-GY-GFJ" secondAttribute="leading" type="default" id="UrK-bt-1Xg"/>
                             <constraint firstItem="OZ1-ES-Da9" firstAttribute="leading" secondItem="Tgf-1z-XiN" secondAttribute="leading" type="default" id="V43-Ak-p2P"/>
                             <constraint firstAttribute="trailing" secondItem="Qwf-5X-hNJ" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Web-3c-xS3"/>
+                            <constraint firstItem="0aG-5c-3b8" firstAttribute="baseline" secondItem="YbL-yG-aZ0" secondAttribute="baseline" type="default" id="Wfl-Px-ZQG"/>
                             <constraint firstAttribute="trailing" secondItem="24L-C8-NbB" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="XWd-Zm-Yr4"/>
+                            <constraint firstItem="0aG-5c-3b8" firstAttribute="baseline" secondItem="Lad-Sy-4Si" secondAttribute="baseline" type="default" id="ZYc-rq-Vfs"/>
                             <constraint firstItem="Djk-md-maW" firstAttribute="leading" secondItem="MQx-us-M7p" secondAttribute="leading" type="default" id="Zh5-TE-ZJg"/>
+                            <constraint firstItem="0aG-5c-3b8" firstAttribute="top" secondItem="YGw-LF-Nx8" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="aru-Hc-bva"/>
                             <constraint firstItem="Djk-md-maW" firstAttribute="leading" secondItem="IyO-b9-Mhg" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="ayQ-VT-9Q8"/>
                             <constraint firstItem="Tgf-1z-XiN" firstAttribute="baseline" secondItem="RmL-5k-a0p" secondAttribute="baseline" type="default" id="b48-au-lx7"/>
                             <constraint firstItem="HcN-MC-3q3" firstAttribute="leading" secondItem="MQx-us-M7p" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="bvP-Ls-NHP"/>
                             <constraint firstItem="IyO-b9-Mhg" firstAttribute="baseline" secondItem="Djk-md-maW" secondAttribute="baseline" type="default" id="cqD-H6-rVs"/>
                             <constraint firstItem="Z80-yA-jQU" firstAttribute="top" secondItem="esI-Kt-p8h" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="crC-m1-mtA"/>
                             <constraint firstItem="Qwf-5X-hNJ" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="dFS-c0-JvP"/>
+                            <constraint firstItem="0aG-5c-3b8" firstAttribute="trailing" secondItem="YbL-yG-aZ0" secondAttribute="trailing" type="default" id="deB-mI-yaj"/>
                             <constraint firstItem="Uyj-90-36w" firstAttribute="top" secondItem="Qwf-5X-hNJ" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="e0D-bQ-jii"/>
                             <constraint firstItem="YGw-LF-Nx8" firstAttribute="baseline" secondItem="rSN-le-aDE" secondAttribute="baseline" type="default" id="eHV-1r-ofW"/>
                             <constraint firstItem="dVA-8a-fLB" firstAttribute="top" secondItem="3" secondAttribute="top" constant="123" id="eO6-aO-nkL"/>
@@ -366,6 +394,8 @@
                             <constraint firstItem="aM8-3v-sf7" firstAttribute="baseline" secondItem="kqH-Gd-rD7" secondAttribute="baseline" type="default" id="hMD-LA-og5"/>
                             <constraint firstItem="24L-C8-NbB" firstAttribute="leading" secondItem="dVA-8a-fLB" secondAttribute="leading" type="default" id="kLg-zz-JtE"/>
                             <constraint firstItem="Tgf-1z-XiN" firstAttribute="leading" secondItem="RmL-5k-a0p" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="kMn-cO-ZeP"/>
+                            <constraint firstItem="0aG-5c-3b8" firstAttribute="leading" secondItem="YGw-LF-Nx8" secondAttribute="leading" type="default" id="kd6-Rh-B1d"/>
+                            <constraint firstItem="0aG-5c-3b8" firstAttribute="trailing" secondItem="YGw-LF-Nx8" secondAttribute="trailing" type="default" id="kus-zd-9v7"/>
                             <constraint firstItem="YGw-LF-Nx8" firstAttribute="leading" secondItem="rSN-le-aDE" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="l7i-7K-Cy0"/>
                             <constraint firstItem="rSN-le-aDE" firstAttribute="top" secondItem="Z80-yA-jQU" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="oWu-Ix-BQZ"/>
                             <constraint firstItem="24L-C8-NbB" firstAttribute="top" secondItem="dVA-8a-fLB" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="oce-Ph-eLk"/>
