Evaluate +/- operations in the program description

--- a/Calculator/iPad.storyboard
+++ b/Calculator/iPad.storyboard
@@ -614,6 +614,8 @@
         <class className="CalculatorViewController" superclassName="RotatableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CalculatorViewController.h"/>
             <relationships>
+                <relationship kind="action" name="bufferedItemPressed:" candidateClass="UIButton"/>
+                <relationship kind="action" name="stackedItemPressed:" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="display" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="programDisplay" candidateClass="UILabel"/>
             </relationships>
@@ -629,7 +631,6 @@
             <relationships>
                 <relationship kind="action" name="addToFavorites:"/>
                 <relationship kind="outlet" name="graphView" candidateClass="GraphView"/>
-                <relationship kind="outlet" name="programDisplay" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
             </relationships>
         </class>
